[package]
name = "arduino_mkrvidor4000"
version = "0.2.0"
authors = ["Sameer Puri <purisame@spuri.io>"]
description = "Board Support crate for the Arduino MKR VIDOR 4000"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal", "arduino"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"
documentation = "https://atsamd-rs.github.io/atsamd/atsamd21g18a/arduino_mkrvidor4000/"

[dependencies]
cortex-m = "~0.6"
embedded-hal = "~0.2.3"
nb = "~0.1"

[dependencies.cortex-m-rt]
version = "~0.6.12"
optional = true

[dependencies.panic-halt]
version = "~0.2"
optional = true

[dependencies.atsamd-hal]
path = "../../hal"
version = "~0.9"
default-features = false

[features]
# ask the HAL to enable atsamd21g18a support
default = ["rt", "panic_halt", "atsamd-hal/samd21g18a"]
rt = ["cortex-m-rt", "atsamd-hal/samd21g18a-rt"]
panic_halt = ["panic-halt"]
unproven = ["atsamd-hal/unproven"]
usb = ["atsamd-hal/usb"]
use_semihosting = []
