[package]
name = "arduino_mkrvidor4000"
version = "0.5.0"
authors = ["Sameer Puri <purisame@spuri.io>"]
description = "Board Support crate for the Arduino MKR VIDOR 4000"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal", "arduino"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"
edition = "2018"

[dependencies]
cortex-m = "0.6"
embedded-hal = "0.2.3"
nb = "0.1"

[dependencies.cortex-m-rt]
version = "0.6.12"
optional = true

[dependencies.atsamd-hal]
version = "0.13"
default-features = false

[dev-dependencies]
panic-halt = "0.2"
panic-semihosting = "0.5"

[features]
# ask the HAL to enable atsamd21g support
default = ["rt", "atsamd-hal/samd21g"]
rt = ["cortex-m-rt", "atsamd-hal/samd21g-rt"]
unproven = ["atsamd-hal/unproven"]
usb = ["atsamd-hal/usb"]
use_semihosting = []

# for cargo flash
[package.metadata]
chip = "ATSAMD21G18A"
