[package]
name = "arduino_mkrwifi1010"
version = "0.1.0"
authors = ["Osvald Ivarsson <osvald@osvald.org>"]
description = "Board Support crate for the Arduino MKR WiFi 1010"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal", "arduino"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"
edition = "2021"

[dependencies.cortex-m-rt]
version = "0.7"
optional = true

[dependencies.atsamd-hal]
version = "0.14"
default-features = false

[dependencies.usb-device]
version = "0.2"
optional = true

[dev-dependencies]
cortex-m = "0.7"
panic-halt = "0.2"
panic-semihosting = "0.5"
usbd-serial = "0.1"
wifi-nina = { git = "https://github.com/Foosvald/wifi-nina", branch = "invert-reset-logic-with-feature", features = ["reset-high"] }
no-std-net = { version = "0.5.0", default-features = false }
heapless = "0.7"


[features]
# ask the HAL to enable atsamd21g support
default = ["rt", "atsamd-hal/samd21g"]
rt = ["cortex-m-rt", "atsamd-hal/samd21g-rt"]
usb = ["atsamd-hal/usb", "usb-device"]
unproven = ["atsamd-hal/unproven"]
use_semihosting = []

# for cargo flash
[package.metadata]
chip = "ATSAMD21G18A"

[[example]]
name = "blinky_basic"

[[example]]
name = "uart"

[[example]]
name = "usb_logging"
required-features = ["usb", "unproven"]

[[example]]
name = "usb_poll"
required-features = ["usb", "unproven"]

[[example]]
name = "onboard_rgb_led"
required-features = ["usb", "unproven"]

[[example]]
name = "wifi"
required-features = ["usb", "unproven"]
