[package]
name = "arduino_mkrzero"
version = "0.11.0"
authors = ["Wez Furlong <wez@wezfurlong.org>", "David McGillicuddy <contact@djmcgill.co.uk>"]
description = "Board Support crate for the Arduino MKRZERO"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal", "arduino"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"
edition = "2018"

[dependencies]
cortex-m = "0.6"
embedded-hal = "0.2.3"

[dependencies.cortex-m-rt]
version = "0.6.12"
optional = true

[dependencies.atsamd-hal]
version = "0.13"
default-features = false

[dependencies.usb-device]
version = "0.2"
optional = true

[dev-dependencies]
usbd-serial = "0.1"
panic-halt = "0.2"
panic-semihosting = "0.5"

[features]
# ask the HAL to enable atsamd21g support
default = ["rt", "atsamd-hal/samd21g", "usb"]
rt = ["cortex-m-rt", "atsamd-hal/samd21g-rt"]
usb = ["atsamd-hal/usb", "usb-device"]
unproven = ["atsamd-hal/unproven"]
use_semihosting = []

# for cargo flash
[package.metadata]
chip = "ATSAMD21G18A"

[[example]]
name = "blinky_basic"

[[example]]
name = "usb_logging"
required-features = ["usb"]

[[example]]
name = "pwm"
required-features = ["unproven"]
