[package]
name = "arduino_nano33iot"
version = "0.5.0"
authors = ["Gus Wynn <guswynn@gmail.com>"]
description = "Board Support crate for the Arduino Nano 33 IOT"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal", "arduino"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"
edition = "2018"

[dependencies]
cortex-m = "0.7"
embedded-hal = "0.2.3"
nb = "1.0"

[dependencies.cortex-m-rt]
version = "0.6.12"
optional = true

[dependencies.atsamd-hal]
version = "0.13"
default-features = false

[dependencies.usb-device]
version = "0.2"
optional = true

[dependencies.usbd-serial]
version = "0.1"
optional = true

[dependencies.rand]
version = "0.8.3"
default-features = false
features = ["small_rng"]

[dev-dependencies]
panic-halt = "0.2"
panic-semihosting = "0.5"
embedded-graphics = "0.7.1"
st7735-lcd = "0.8.1"
ssd1306 = { version = "0.6", features = ["graphics"] }

[features]
# ask the HAL to enable atsamd21g support
default = ["rt", "atsamd-hal/samd21g"]
rt = ["cortex-m-rt", "atsamd-hal/samd21g-rt"]
usb = ["atsamd-hal/usb", "usb-device", "usbd-serial"]
unproven = ["atsamd-hal/unproven"]
use_semihosting = []

# for cargo flash
[package.metadata]
chip = "ATSAMD21G18A"

[package.metadata.atsamd.bsp]
tier = 2
build_command = "cargo build --examples --features=unproven,usb"

[[example]]
name = "blinky_basic"

[[example]]
name = "usb_logging"
required-features = ["usb"]

[[example]]
name = "serial"

[[example]]
name = "i2c_ssd1306"

[[example]]
name = "spi_st7735"
