[package]
name = "arduino_nano33iot"
version = "0.7.2"
authors = ["Gus Wynn <guswynn@gmail.com>"]
description = "Board Support crate for the Arduino Nano 33 IOT"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal", "arduino"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"
edition = "2021"

[dependencies.cortex-m-rt]
version = "0.7"
optional = true

[dependencies.atsamd-hal]
version = "0.23.0"
default-features = false

[dependencies.usb-device]
version = "0.3.2"
optional = true

[dependencies.rand]
version = "0.8"
default-features = false
features = ["small_rng"]

[dev-dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
usbd-serial = "0.2.2"
panic-halt = "1.0.0"
panic-semihosting = "0.6"
embedded-graphics = "0.7"
st7735-lcd = "0.8"
ssd1306 = { version = "0.7", features = ["graphics"] }

[features]
# ask the HAL to enable atsamd21g support
default = ["rt", "atsamd-hal/samd21g"]
rt = ["cortex-m-rt", "atsamd-hal/samd21g-rt"]
usb = ["atsamd-hal/usb", "usb-device"]
use_semihosting = []

# for cargo flash
[package.metadata]
chip = "ATSAMD21G18A"

[[example]]
name = "blinky_basic"

[[example]]
name = "usb_logging"
required-features = ["usb"]

[[example]]
name = "serial"

[[example]]
name = "i2c_ssd1306"

[[example]]
name = "spi_st7735"
