[package]
name = "atsamc21_xpro"
version = "0.0.0"
authors = [
    "Jeremy Boynes <jeremy@boynes.com>"
]
description = "Board Support crate for the SAM C21 Xplained Pro Evaluation Kit"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"

# for cargo flash
[package.metadata]
chip = "ATSAMC21J18A"

[dependencies.cortex-m-rt]
version = "0.7"
optional = true

[dependencies.atsamc21j]
path = "../../pac/atsamc21j"


#[dependencies.atsamd-hal]
#path = "../../hal"
#version = "0.15"
#default-features = false

[dev-dependencies]
cortex-m = "0.7"
panic-halt = "0.2"
panic-semihosting = "0.6"

[features]
#default = ["rt", "atsamd-hal/samc21j", "atsamd-hal/unproven"]
#rt = ["cortex-m-rt", "atsamd-hal/samc21j-rt"]
#unproven = ["atsamd-hal/unproven"]
default = ["rt", ]
rt = ["cortex-m-rt"]

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = true

[profile.release]
lto = true
opt-level = "s"

[[example]]
name = "blinky_pac"

#[[example]]
#name = "blinky_basic"
