[package]
name = "atsame54_xpro"
version = "0.8.2"
authors = [
    "Karsten Große <karsten.grosse@sympatron.de>",
    "John Little <johngigantic@gmail.com>"
]
description = "Board Support crate for the SAM E54 Xplained Pro Evaluation Kit"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"

[dependencies.cortex-m-rt]
version = "0.7"
optional = true

[dependencies.cortex-m]
version = "0.7"
features = ["critical-section-single-core"]

[dependencies.atsamd-hal]
path = "../../hal"
version = "0.19.0"
default-features = false

[dependencies.usb-device]
version = "0.3.1"
optional = true

[dev-dependencies]
mcan = "0.2"
cortex-m-rtic = "1.1"
dwt-systick-monotonic = "1.1"
panic-rtt-target = { version = "0.1", features = ["cortex-m"] }
rtt-target = { version = "0.3", features = ["cortex-m"] }

[features]
default = ["rt", "atsamd-hal/same54p"]
dma = ["atsamd-hal/dma"]
rt = ["cortex-m-rt", "atsamd-hal/same54p-rt"]
usb = ["atsamd-hal/usb", "usb-device"]
can = ["atsamd-hal/can"]

[[example]]
name = "blinky_basic"

[[example]]
name = "blinky_rtic"

[[example]]
name = "mcan"
required-features = ["can"]
