[package]
authors = [
  "Karsten Große <karsten.grosse@sympatron.de>",
  "John Little <johngigantic@gmail.com>",
]
categories = ["embedded", "hardware-support", "no-std"]
description = "Board Support crate for the SAM E54 Xplained Pro Evaluation Kit"
edition = "2021"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
license = "MIT OR Apache-2.0"
name = "atsame54_xpro"
readme = "README.md"
repository = "https://github.com/atsamd-rs/atsamd"
version = "0.12.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.7"

[dependencies.cortex-m]
features = ["critical-section-single-core"]
version = "0.7"

[dependencies.atsamd-hal]
default-features = false
path = "../../hal"
version = "0.22.0"

[dependencies.usb-device]
optional = true
version = "0.3.1"

[dependencies.embassy-executor]
optional = true
version = "0.6.2"
features = ["arch-cortex-m", "executor-thread", "executor-interrupt"]

[dependencies]
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1", features = ["print-defmt"] }

[dev-dependencies]
mcan = "0.2"
panic-rtt-target = {version = "0.1", features = ["cortex-m"]}
rtic = {version = "2.1.2", features = ["thumbv7-backend"]}
rtt-target = {version = "0.3", features = ["cortex-m"]}

[features]
default = ["rt", "atsamd-hal/same54p"]
dma = ["atsamd-hal/dma"]
max-channels = ["dma", "atsamd-hal/max-channels"]
# Enable async support from atsamd-hal
async = ["atsamd-hal/async"]
can = ["atsamd-hal/can"]
rt = ["cortex-m-rt", "atsamd-hal/same54p-rt"]
usb = ["atsamd-hal/usb", "usb-device"]
# Enable rtic support from atsamd-hal
rtic = ["atsamd-hal/rtic"]
embassy = ["dep:embassy-executor"]

[[example]]
name = "blinky_basic"

[[example]]
name = "blinky_rtic"
required-features = ["rtic"]

[[example]]
name = "mcan"
required-features = ["can", "rtic"]

[[example]]
name = "rx_dma"
required-features = ["embassy", "async", "dma"]

