[package]
name = "circuit_playground_express"
version = "0.10.0"
authors = ["Paul Sajna <paulsajna@gmail.com>"]
description = "Board Support crate for the Adafruit Circuit Playground Express"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"
edition = "2018"

[dependencies.atsamd-hal]
version = "0.13"
default-features = false

[dev-dependencies]
panic-halt = "0.2"
panic-semihosting = "0.5"
cortex-m-rt = "0.6.12"

[features]
# ask the HAL to enable atsamd21g support
default = ["rt", "atsamd-hal/samd21g"]
rt = ["atsamd-hal/samd21g-rt"]
unproven = ["atsamd-hal/unproven"]
use_semihosting = []

# for cargo flash
[package.metadata]
chip = "ATSAMD21G18A"
