[package]
name = "edgebadge"
version = "0.7.0"
authors = ["Jacob Rosenthal <@jacobrosenthal>"]
description = "Board Support crate for the Adafruit EdgeBadge"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"
edition = "2018"
exclude = ["assets"]

[dependencies]
cortex-m = "0.6"
embedded-hal = "0.2.3"
nb = "0.1"
st7735-lcd = "0.8.1"
ws2812-timer-delay = "0.3"

[dependencies.cortex-m-rt]
version = "0.6.12"
optional = true

[dependencies.atsamd-hal]
path = "../../hal"
version = "0.12"
default-features = false

[dependencies.micromath]
version = "0.5.1"
optional = true

[dependencies.usb-device]
version = "0.2"
optional = true

[dependencies.usbd-serial]
version = "0.1"
optional = true

[dev-dependencies]
panic-halt = "0.2"
embedded-graphics = "0.7.1"
smart-leds = "0.3"
ws2812-spi = { version = "0.4.0", features = ["mosi_idle_high"] }
lis3dh = "0.1.0"
cortex-m-rtic = "0.5.1"
tinybmp = "0.3.1"

[features]
# ask the HAL to enable atsamd51j support
default = ["rt", "atsamd-hal/samd51j", "atsamd-hal/samd51", "unproven"]
rt = ["cortex-m-rt", "atsamd-hal/samd51j-rt"]
unproven = ["atsamd-hal/unproven"]
usb = ["atsamd-hal/usb", "usb-device", "usbd-serial"]
math = ["micromath"]

[profile.dev]
# opt-level = 2 # uncomment for neopixel functionality during debug
incremental = false
debug = true
lto = "thin" # thin for debug speed

[profile.release]
debug = true
lto = "fat"
opt-level = 's'

# for cargo flash
[package.metadata]
chip = "ATSAMD51J19A"

[[example]]
name = "usb_serial"
required-features = ["usb"]

[[example]]
name = "usb_poll"
required-features = ["usb"]

[[example]]
name = "neopixel_easing"
required-features = ["math"]
