[package]
name = "edgebadge"
version = "0.9.1"
authors = ["Jacob Rosenthal <@jacobrosenthal>"]
description = "Board Support crate for the Adafruit EdgeBadge"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"
edition = "2021"
exclude = ["assets"]

[dependencies]
cortex-m = "0.7"
st7735-lcd = "0.9.0"
ws2812-timer-delay = "0.3"

[dependencies.cortex-m-rt]
version = "0.7"
optional = true

[dependencies.atsamd-hal]
version = "0.14"
default-features = false

[dependencies.micromath]
version = "2"
optional = true

[dependencies.usb-device]
version = "0.2"
optional = true

[dev-dependencies]
usbd-serial = "0.1"
panic-halt = "0.2"
embedded-graphics = "0.8.1"
smart-leds = "0.3"
lis3dh = "0.1.0"
cortex-m-rtic = "1.0"
tinybmp = "0.5.0"

[features]
# ask the HAL to enable atsamd51j support
default = ["rt", "atsamd-hal/samd51j", "unproven"]
rt = ["cortex-m-rt", "atsamd-hal/samd51j-rt"]
unproven = ["atsamd-hal/unproven"]
usb = ["atsamd-hal/usb", "usb-device"]
math = ["micromath"]

# for cargo flash
[package.metadata]
chip = "ATSAMD51J19A"

[[example]]
name = "usb_serial"
required-features = ["usb"]

[[example]]
name = "usb_poll"
required-features = ["usb"]

[[example]]
name = "neopixel_easing"
required-features = ["math"]
