[package]
name = "feather_m0"
version = "0.11.0"
authors = ["Ben Bergman <ben@benbergman.ca>"]
description = "Board Support crate for the Adafruit Feather M0"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"
edition = "2021"
resolver = "2"

[dependencies.cortex-m-rt]
version = "0.7"
optional = true

[dependencies.atsamd-hal]
path = "../../hal"
version = "0.14"
default-features = false

[dependencies.usb-device]
version = "0.2"
optional = true

[dependencies.embedded-sdmmc]
version = "0.3"
optional = true

[dev-dependencies]
cortex-m-rtic = "1.0"
cortex-m = "0.7"
usbd-serial = "0.1"
cortex-m-semihosting = "0.3"
ssd1306 = "0.7"
embedded-graphics = "0.7.1"
drogue-nom-utils = "0.1"
nom = { version = "5", default-features = false }
heapless = "0.7"
panic-halt = "0.2"
panic-semihosting = "0.5"

[features]
# ask the HAL to enable atsamd21g support
default = ["rt", "atsamd-hal/samd21g"]
rt = ["cortex-m-rt", "atsamd-hal/samd21g-rt"]
unproven = ["atsamd-hal/unproven"]
use_rtt = ["atsamd-hal/use_rtt"]
usb = ["atsamd-hal/usb", "usb-device"]
# Enable pins for the radio on "RadioFruits" with RFM95, RFM96, RFM69
rfm = []
# Enable pins for the flash and neopixel on the Feather M0 Express
express = []
dma = ["atsamd-hal/dma"]
max-channels = ["dma", "atsamd-hal/max-channels"]
# Enable pins for the adalogger SD card reader
adalogger = []
sdmmc = ["embedded-sdmmc", "atsamd-hal/sdmmc"]
rtic = ["atsamd-hal/rtic"]
use_semihosting = []

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = false

[profile.release]
debug = true
lto = true
opt-level = "s"

# for cargo flash
[package.metadata]
chip = "ATSAMD21G18A"

[[example]]
name = "blinky_basic"

[[example]]
name = "timers"

[[example]]
name = "pwm"
required-features = ["unproven"]

[[example]]
name = "adc"
required-features = ["unproven"]

[[example]]
name = "ssd1306_graphicsmode_128x64_i2c"

[[example]]
name = "ssd1306_graphicsmode_128x32_i2c"

[[example]]
name = "ssd1306_terminalmode_128x32_i2c"

[[example]]
name = "ssd1306_terminalmode_128x64_i2c"

[[example]]
name = "ssd1306_graphicsmode_128x64_spi"

[[example]]
name = "ssd1306_terminalmode_128x64_spi"

[[example]]
name = "usb_echo"
required-features = ["usb", "unproven"]

[[example]]
name = "sleeping_timer"

[[example]]
name = "sleeping_timer_rtc"

[[example]]
name = "dmac"
required-features = ["dma"]

[[example]]
name = "clock"
required-features = ["usb", "unproven"]

[[example]]
name = "adalogger"
required-features = ["adalogger", "usb", "sdmmc", "unproven"]

[[example]]
name = "blinky_rtic"
required-features = ["rtic", "unproven"]

[[example]]
name = "uart"
required-features = ["dma"]

[[example]]
name = "i2c"
required-features = ["dma"]
