[package]
name = "feather_m4"
version = "0.13.2"
edition = "2021"
authors = ["Theodore DeRego <tderego94@gmail.com>"]
description = "Board Support crate for the Adafruit Feather M4"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"
documentation = "https://atsamd-rs.github.io/atsamd/atsamd51j/feather_m4/"

# for cargo flash
[package.metadata]
chip = "ATSAMD51J19A"

[dependencies.cortex-m-rt]
version = "0.7"
optional = true

[dependencies.cortex-m]
version = "0.7"
features = ["critical-section-single-core"]

[dependencies.atsamd-hal]
path = "../../hal"
version = "0.19.0"
default-features = false

[dependencies.usb-device]
version = "0.3.1"
optional = true

[dev-dependencies]
usbd-serial = "0.2"
cortex-m-rtic = "0.6.0-rc.2"
panic-halt = "0.2"
panic-semihosting = "0.5"
smart-leds = "0.3"
ws2812-timer-delay = "0.3"
heapless = "0.7"

[features]
# ask the HAL to enable atsamd51j support
default = ["rt", "atsamd-hal/samd51j"]
rt = ["cortex-m-rt", "atsamd-hal/samd51j-rt"]
usb = ["atsamd-hal/usb", "usb-device"]
dma = ["atsamd-hal/dma"]
max-channels = ["dma", "atsamd-hal/dma"]
use_semihosting =  []

[[example]]
name = "pwm"

[[example]]
name = "usb_echo"
required-features = ["usb"]

[[example]]
name = "dmac"
required-features = ["dma"]

[[example]]
name = "uart"

[[example]]
name = "uart_poll_echo"

[[example]]
name = "uart_dma_nonblocking"
required-features = ["dma"]

[[example]]
name = "uart_dma_blocking"
required-features = ["dma"]

[[example]]
name = "pukcc_test"
required-features = ["usb"]

[[example]]
name = "nvm_dsu"
required-features = ["usb"]

[[example]]
name = "smart_eeprom"
required-features = [ "usb"]

[[example]]
name = "i2c"
required-features = ["dma"]

[[example]]
name = "spi"
required-features = ["dma"]
